--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,8 @@ body {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(#1c1c1c, 0.2);
 }
+
+form i {
+  margin-left: -30px;
+  cursor: pointer;
+}
